--- a/app/views/video.erb
+++ b/app/views/video.erb
@@ -36,12 +36,22 @@
       <% @comments.each do |comment|  %>
         <li data-comment-id="<%=comment["id"]%>" class="list-group-item">
           <p class="list-group-item-text"><%=comment["body"]%></p>
-          <strong>Posted by <%=comment.user["name"]%> on <%=comment["created"]%>.</strong> <a onclick="replyComment(this);" class="comment-reply-link">Reply</a>
+          <strong>Posted by <%=comment.user["name"]%> on <%=comment["created"]%>.</strong> <a onclick="replyComment(this);" class="comment-reply-link">Reply</a> - 
+          <% if @user == comment.user %>
+            <form style="display: inline-block;" class="comment-remove-form" method="post" action="/remove_comment/<%=comment["id"]%>">
+              <a onclick="removeComment(this);" class="comment-remove-link">Remove comment</a>
+            </form>
+          <% end %>
           <ul class="list-group" style="margin: 10px 0 0 0;">
             <% @replies[comment["id"]].each do |reply| %>
               <li data-comment-id="<%=reply["id"]%>" class="list-group-item">
                 <p class="list-group-item-text"><%=reply["body"]%></p>
                 <strong>Posted by <%=reply.user["name"]%> on <%=reply["created"]%>.</strong>
+                <% if @user == reply.user %>
+                  <form style="display: inline-block;" class="comment-remove-form" method="post" action="/remove_comment/<%=reply["id"]%>">
+                    <a onclick="removeComment(this);" class="comment-remove-link">Remove comment</a>
+                  </form>
+                <% end %>
               </li>
             <% end %>
           </ul>
@@ -145,5 +155,10 @@
     form.find('label').remove();
     form.append('<input type="text" name="replyID" style="display: none;" value="' + replyID + '">');
     $(clicked).parent().append(form);
+  }
+
+  function removeComment(clicked)
+  {
+    $(clicked).parent().submit();
   }
 </script>
