--- a/app/views/video.erb
+++ b/app/views/video.erb
@@ -35,21 +35,29 @@
     <ul class="list-group">
       <% @comments.each do |comment|  %>
         <li data-comment-id="<%=comment["id"]%>" class="list-group-item">
+          <div class="col-xs-1 col-md-1 comment-voting-container">
+            <span class="glyphicon glyphicon-arrow-up"></span>
+            <span class="glyphicon glyphicon-arrow-down"></span>
+          </div>
           <p class="list-group-item-text"><%=comment["body"]%></p>
           <strong>Posted by <%=comment.user["name"]%> on <%=comment["created"]%>.</strong> <a onclick="replyComment(this);" class="comment-reply-link">Reply</a> - 
           <% if @user == comment.user %>
-            <form style="display: inline-block;" class="comment-remove-form" method="post" action="/remove_comment/<%=comment["id"]%>">
-              <a onclick="removeComment(this);" class="comment-remove-link">Remove comment</a>
+            <form class="comment-remove-form" method="post" action="/remove_comment/<%=comment["id"]%>">
+              <a onclick="removeComment(this);" class="comment-remove-link">Remove</a>
             </form>
           <% end %>
           <ul class="list-group" style="margin: 10px 0 0 0;">
             <% @replies[comment["id"]].each do |reply| %>
               <li data-comment-id="<%=reply["id"]%>" class="list-group-item">
+                <div class="col-xs-1 col-md-1 comment-voting-container">
+                  <span class="glyphicon glyphicon-arrow-up"></span>
+                  <span class="glyphicon glyphicon-arrow-down"></span>
+                </div>
                 <p class="list-group-item-text"><%=reply["body"]%></p>
                 <strong>Posted by <%=reply.user["name"]%> on <%=reply["created"]%>.</strong>
                 <% if @user == reply.user %>
-                  <form style="display: inline-block;" class="comment-remove-form" method="post" action="/remove_comment/<%=reply["id"]%>">
-                    <a onclick="removeComment(this);" class="comment-remove-link">Remove comment</a>
+                  <form class="comment-remove-form" method="post" action="/remove_comment/<%=reply["id"]%>">
+                    <a onclick="removeComment(this);" class="comment-remove-link">Remove</a>
                   </form>
                 <% end %>
               </li>
