--- a/app/public/stylesheets/index.css
+++ b/app/public/stylesheets/index.css
@@ -43,7 +43,7 @@ body {
     width: 20px;
 }
 
-#comments-section form {
+#comment-remove-form, #comment-upvote-form, #comment-downvote-form {
     display: inline-block;
 }
 
